fixing contrast, metaDate and butn

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -312,7 +312,7 @@
         color: black;
         width: 100%;
         max-width: 20rem;
-        background-color: lightgray;
+        background-color: #e6e8e6;
     }
 
     form label.sbs {
@@ -328,7 +328,7 @@
     form input.submitBtn {
         border: none;
         background-color: #df2935;
-        color: lightgray;
+        color: white;
         border-radius: 1rem;
         padding: .75rem 1.5rem;
         margin: 0 0 2rem 2%;
@@ -348,7 +348,7 @@
     .thanks {
         display: block;
         text-align: center;
-        color: lightgrey;
+        color: #e6e8e6;
         font-size: 1.5rem;
         background-color: #df2935;
         width: 50%;
