--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -342,7 +342,7 @@ form label.top input, form label.top select {
     color: black;
     width: 100%;
     max-width: 20rem;
-    background-color: lightgray;
+    background-color: #e6e8e6;
 }
 
 form label.sbs {
@@ -358,7 +358,7 @@ textarea {
 form input.submitBtn {
     border: none;
     background-color: #df2935;
-    color: lightgray;
+    color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
     margin: 0 0 2rem 2%;
@@ -378,7 +378,7 @@ form label.top input:required:valid {
 .thanks {
     display: block;
     text-align: center;
-    color: lightgrey;
+    color: white;
     font-size: 1.5rem;
     background-color: #df2935;
     width: 50%;
